--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,10 +1,10 @@
 [package]
 name = "markdown2html-converter"
-version = "0.1.0"
+version = "1.0.0"
 authors = ["Magic Len <len@magiclen.org>"]
 repository = "https://github.com/magiclen/markdown2html-converter"
 homepage = "https://magiclen.org/markdown2html-converter"
-keywords = ["markdown", "html"]
+keywords = ["markdown", "html", "MathJax", "LaTeX", "highlight"]
 categories = ["command-line-utilities"]
 description= "A tool for converting a Markdown file to a single HTML file with built-in CSS and JS."
 readme = "README.md"
