escape html which is from cli

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "markdown2html-converter"
-version = "1.0.3"
+version = "1.0.4"
 authors = ["Magic Len <len@magiclen.org>"]
 repository = "https://github.com/magiclen/markdown2html-converter"
 homepage = "https://magiclen.org/markdown2html-converter"
@@ -22,3 +22,4 @@ lazy-static-include = "1.2.0"
 html-minifier = "1.1.2"
 comrak = "0.3"
 lazy_static = "1.1"
+htmlescape = "0.3.1"
