--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "markdown2html-converter"
-version = "1.0.7"
+version = "1.0.8"
 authors = ["Magic Len <len@magiclen.org>"]
 repository = "https://github.com/magiclen/markdown2html-converter"
 homepage = "https://magiclen.org/markdown2html-converter"
@@ -18,6 +18,7 @@ panic = "abort"
 
 [dependencies]
 clap = "2"
+terminal_size = "0.1"
 lazy-static-include = "2"
 html-minifier = "1"
 comrak = "0.5"
