--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,8 +10,9 @@ description= "A tool for converting a Markdown file to a single HTML file with b
 readme = "README.md"
 license = "MIT"
 
-[badges]
-travis-ci = { repository = "magiclen/markdown2html-converter", branch = "master" }
+[badges.travis-ci]
+repository = "magiclen/markdown2html-converter"
+branch = "master"
 
 [profile.release]
 panic = "abort"
