--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "markdown2html-converter"
-version = "1.1.3"
+version = "1.1.4"
 authors = ["Magic Len <len@magiclen.org>"]
 edition = "2018"
 repository = "https://github.com/magiclen/markdown2html-converter"
@@ -24,10 +24,10 @@ terminal_size = "0.1"
 
 lazy-static-include = "3"
 html-minifier = "3"
-comrak = "0.9"
+comrak = "0.10"
 html-escape = "0.2"
 slash-formatter = "3"
 
 [dependencies.path-absolutize]
 version = "3"
-features = ["lazy_static_cache"]
+features = ["once_cell_cache"]
