--- a/.github/workflows/ci-version.yml
+++ b/.github/workflows/ci-version.yml
@@ -9,14 +9,12 @@ env:
   CARGO_TERM_COLOR: always
 
 jobs:
-  tests:
+  tests-1:
     strategy:
       fail-fast: false
       matrix:
         os:
           - ubuntu-latest
-          - macos-latest
-          - windows-latest
         toolchain:
           - stable
           - nightly
@@ -36,3 +34,26 @@ jobs:
       - run: cargo build --release --target ${{ matrix.target }}
       - run: cargo test --release --target ${{ matrix.target }}
       - run: cargo doc --release --target ${{ matrix.target }}
+
+  tests-2:
+    strategy:
+      fail-fast: false
+      matrix:
+        os:
+          - macos-latest
+          - windows-latest
+        toolchain:
+          - stable
+          - nightly
+    name: Test ${{ matrix.toolchain }} on ${{ matrix.os }}
+    runs-on: ${{ matrix.os }}
+    steps:
+      - uses: actions/checkout@v2
+      - uses: actions-rs/toolchain@v1
+        with:
+          profile: minimal
+          toolchain: ${{ matrix.toolchain }}
+          override: true
+      - run: cargo build --release
+      - run: cargo test --release
+      - run: cargo doc --release
