--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -30,14 +30,12 @@ jobs:
           components: clippy
       - run: cargo clippy -- -D warnings
 
-  tests:
+  tests-1:
     strategy:
       fail-fast: false
       matrix:
         os:
           - ubuntu-latest
-          - macos-latest
-          - windows-latest
         toolchain:
           - stable
           - nightly
@@ -57,3 +55,26 @@ jobs:
       - run: cargo build --target ${{ matrix.target }}
       - run: cargo test --target ${{ matrix.target }}
       - run: cargo doc --target ${{ matrix.target }}
+
+  tests-2:
+    strategy:
+      fail-fast: false
+      matrix:
+        os:
+          - macos-latest
+          - windows-latest
+        toolchain:
+          - stable
+          - nightly
+    name: Test ${{ matrix.toolchain }} on ${{ matrix.os }}
+    runs-on: ${{ matrix.os }}
+    steps:
+      - uses: actions/checkout@v2
+      - uses: actions-rs/toolchain@v1
+        with:
+          profile: minimal
+          toolchain: ${{ matrix.toolchain }}
+          override: true
+      - run: cargo build
+      - run: cargo test
+      - run: cargo doc
