--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -45,6 +45,11 @@ jobs:
     name: Test ${{ matrix.toolchain }} on ${{ matrix.os }} to ${{ matrix.target }}
     runs-on: ${{ matrix.os }}
     steps:
+      - name: Install libwebp (Linux)
+        run: |
+          sudo apt update
+          sudo apt install musl-tools
+        if: matrix.target == 'x86_64-unknown-linux-musl'
       - uses: actions/checkout@v2
       - uses: actions-rs/toolchain@v1
         with:
