--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,6 +3,7 @@ name = "markdown2html-converter"
 version = "1.1.10"
 authors = ["Magic Len <len@magiclen.org>"]
 edition = "2021"
+rust-version = "1.59"
 repository = "https://github.com/magiclen/markdown2html-converter"
 homepage = "https://magiclen.org/markdown2html-converter"
 keywords = ["markdown", "html", "MathJax", "LaTeX", "highlight"]
@@ -16,6 +17,7 @@ include = ["src/**/*", "Cargo.toml", "README.md", "LICENSE", "resources/*"]
 lto = true
 codegen-units = 1
 panic = "abort"
+strip = true
 
 [dependencies]
 clap = "3.2.23"
@@ -23,8 +25,8 @@ concat-with = "0.2"
 terminal_size = "0.2"
 
 lazy-static-include = "3.1.1"
-html-minifier = "3"
-comrak = "0.14"
+html-minifier = "4"
+comrak = { version = "0.18", default-features = false }
 html-escape = "0.2"
 
 [dependencies.path-absolutize]
