--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,7 +3,7 @@ name = "markdown2html-converter"
 version = "1.1.11"
 authors = ["Magic Len <len@magiclen.org>"]
 edition = "2021"
-rust-version = "1.61"
+rust-version = "1.70"
 repository = "https://github.com/magiclen/markdown2html-converter"
 homepage = "https://magiclen.org/markdown2html-converter"
 keywords = ["markdown", "html", "MathJax", "LaTeX", "highlight"]
@@ -19,15 +19,13 @@ panic = "abort"
 strip = true
 
 [dependencies]
-clap = "3.2.23"
+clap = { version = "4", features = ["derive"] }
 concat-with = "0.2"
-terminal_size = "0.2"
+terminal_size = "0.3"
+
+anyhow = "1"
 
 lazy-static-include = "3.1.1"
 html-minifier = "4"
-comrak = { version = "0.18", default-features = false }
+comrak = { version = "0.19", default-features = false }
 html-escape = "0.2"
-
-[dependencies.path-absolutize]
-version = "3"
-features = ["once_cell_cache"]
